--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
 	<div id="gameContainer">
 		<canvas id="game" data-pixel-art="true"></canvas>
-        <script type="module" src="raylib.js"></script>
+        <script type="module" src="main.js"></script>
 	</div>
 </body>
 
